# transazioniFinanziarie

./: .README.md.swp  CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Data.cpp  Data.h  README.md  StoricoTransazioni.cpp  StoricoTransazioni.h  Transazione.cpp  Transazione.h  TransazioneIngresso.h  TransazioneUscita.h  Utente.cpp  Utente.h  contoMarco.txt  main.cpp
test/: CMakeLists.txt  ContoCorrenteFixture.cpp  DataSuite.cpp  StoricoTransazioniFixture.cpp  TestInvio.cpp  TransazioneSuite.cpp
test/docs/: contoMarco.txt  contoMarco1.txt  storico1.txt
test/lib/googletest/: CMakeLists.txt
